--- a/environments/dev/apps/app-bgdemo-service/services/bgdemo-service/base/config/build.yaml
+++ b/environments/dev/apps/app-bgdemo-service/services/bgdemo-service/base/config/build.yaml
@@ -14,7 +14,7 @@ metadata:
     app.openshift.io/runtime: php
     app.openshift.io/runtime-version: 7.4-ubi8
   name: bgdemo
-  namespace: secdemo
+  namespace: dev
 spec:
   failedBuildsHistoryLimit: 5
   nodeSelector: null
