--- a/environments/dev/apps/app-bgdemo-service/services/bgdemo-service/base/config/deployment.yaml
+++ b/environments/dev/apps/app-bgdemo-service/services/bgdemo-service/base/config/deployment.yaml
@@ -17,7 +17,7 @@ metadata:
     app.openshift.io/runtime: php
     app.openshift.io/runtime-version: 7.4-ubi8
   name: bgdemo
-  namespace: secdemo
+  namespace: dev
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
