--- a/environments/dev/apps/app-bgdemo-service/services/bgdemo-service/base/config/kustomization.yaml
+++ b/environments/dev/apps/app-bgdemo-service/services/bgdemo-service/base/config/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: secdemo
+namespace: dev
 
 commonAnnotations:
   argocd.argoproj.io/sync-wave: "0"
