--- a/environments/dev/apps/app-bgdemo-service/services/bgdemo-service/base/config/100-deployment.yaml
+++ b/environments/dev/apps/app-bgdemo-service/services/bgdemo-service/base/config/100-deployment.yaml
@@ -22,7 +22,7 @@ spec:
         app.kubernetes.io/part-of: app-bgdemo-service
     spec:
       containers:
-      - image: nginxinc/nginx-unprivileged:latest
+      - image: image-registry.openshift-image-registry.svc:5000/cicd/bgdemo-service:dev
         imagePullPolicy: Always
         name: bgdemo-service
         ports:
