--- a/environments/dev/apps/app-bgdemo-service/services/bgdemo-service/base/config/kustomization.yaml
+++ b/environments/dev/apps/app-bgdemo-service/services/bgdemo-service/base/config/kustomization.yaml
@@ -7,8 +7,6 @@ commonAnnotations:
   argocd.argoproj.io/sync-wave: "0"
 
 resources:
-  - is.yaml
-  - build.yaml
-  - deployment.yaml
-  - service.yaml
-  - route.yaml
+  - 100-deployment.yaml
+  - 200-service.yaml
+  - 300-route.yaml
