--- a/config/cicd/base/04-pipelines/app-ci-pipeline.yaml
+++ b/config/cicd/base/04-pipelines/app-ci-pipeline.yaml
@@ -99,6 +99,18 @@ spec:
     params:
        - name: SCRIPT
          value: oc tag $(params.IMAGE) bgdemo-service:dev
+  - name: rollout-dev
+    taskRef:
+      name: rollout-restart
+      kind: Task
+      runAfter:
+        - tag-dev
+      params:
+        - name: APP_NAME
+          value: "$(params.app-name)"
+        - name: NAMESPACE
+          value: "petclinic-dev"
+
   workspaces:
   - description: This workspace will receive the cloned git repo.
     name: shared-data
